--- a/css/fortune-styles.css
+++ b/css/fortune-styles.css
@@ -1,71 +1,177 @@
 *, *:after, *:before {
- box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  line-height: 1.1em;
+  padding-bottom: .1em;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
-width: 900px;
-margin: 0 auto;
+  width: 900px;
+  margin: 0 auto;
+  background-color: purple;
 }
 
-.header1{
-text-align: center;
-border-bottom: 1px solid black;
-padding-bottom: 10px;
+.header1 {
+  text-align: center;
+  padding: 10px 0 10px 0;
+}
+
+.header1 p {
+  font-family: 'PT Serif', serif;
+  font-style: italic;
 }
 
 .header2 {
-text-align: center;
-padding: 10px 0 10px 0;
+  text-align: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
 
+.header2 h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.7em;
 }
 
 .col-1 {
-width: 20%;
-float: left;
-background-color: pink;
+  width: 20%;
+  float: left;
+  background-color: pink;
+  padding: 20px 25px 0 0;
+  position: relative;
+}
+
+.col-1 p {
+  font-size: 1em;
+}
+
+.caption {
+  text-align: right;
+  font-size: .7em;
+  color: red;
+  padding: 15px 0;
+  font-style: italic;
+}
+
+.absolute {
+  position: absolute;
+  right: -20px;
+  width: 100px;
 }
 
 .col-2 {
-width: 55%;
-float: left;
-background-color: green;
-margin: 0 20px 0 20px;
+  width: 55%;
+  float: left;
+  background-color: green;
+  margin: 0 20px 0 20px;
+  padding-top: 20px;
 }
 
 .col-3 {
-width: 20%;
-float: left;
-background-color: yellow;
+  width: 20%;
+  float: left;
+  padding-top: 20px;
+  background-color: yellow;
+}
+
+.col-3 p{
+  font-size: .8em;
 }
 
 img {
-width: 100%;
+  width: 100%;
 }
 
-/*[class*="col-"]:after {
+section {
+  clear: both;
+}
+
+.lower-section-wrapper:after {
   content: "";
   display: table;
   clear: both;
-}*/
+}
 
 .lower-section-wrapper {
-width: 100%
+  border-left: 1px dashed black;
+  border-top: 1px dashed black;
+  border-right: 1px dashed black;
+  border-bottom: 20px solid black;
+  background-color: orange;
 }
 
-.lower-section-col-1 {
-float: left;
-width: 33%;
-
+.lower-section-heading {
+  width: 100%;
 }
 
-.lower-section-col-2 {
-float: left;
-width: 33%
-
+.lower-section-heading h1 {
+  text-align: center;
+  font-family: 'Advent Pro', sans-serif;
+  font-size: 1.6em;
+  letter-spacing: .2em;
+  padding: 15px;
+  margin: 0;
 }
 
-.lower-section-col-3 {
-float: left;
-width: 33%
+.lower-section-col {
+  float: left;
+  width: 33.33%;
+  padding: 8px 35px;
+  min-height: 180px;
+  border-right: 1px dashed black;
+  text-align: center;
+  font-size: .9em;
+}
 
+.lower-section-col:last-of-type {
+  border-right: 0;
+}
+
+.lower-section-col h1 {
+  font-weight: bold;
+}
+
+.serif-italic {
+  font-family: 'PT Serif', serif;
+  font-style: italic;
+  font-size: .9em;
+  padding-bottom: 10px;
+}
+
+.footer1 {
+  clear: both;
+  background-color: yellow;
+
+}
+.footer2 {
+  background-color: red;
+}
+
+.page-number {
+  color: red;
+  font-size: 1.4em;
+}
+
+.padding-right {
+  padding-right: 15px;
+}
+
+.bump-up-font {
+  font-size: 2.6em;
+  line-height: .9em;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.padding-bottom {
+  padding-bottom: 10px;
 }
