--- a/css/fortune-styles.css
+++ b/css/fortune-styles.css
@@ -41,6 +41,24 @@ body {
   text-align: center;
 }
 
+.header2 h1:before {
+	content: "";
+	display: block;
+	border-top: solid 10px black;
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	top: 40%;
+	z-index: 1;
+}
+
+.header2 h1 span {
+	background: #fff;
+	padding: 0 20px;
+	position: relative;
+	z-index: 5;
+}
+
 .col-1 {
   width: 20%;
   float: left;
@@ -59,6 +77,7 @@ body {
   color: red;
   padding: 15px 0;
   font-style: italic;
+  font-family: 'PT Serif', serif;
 }
 
 .absolute {
@@ -171,8 +190,19 @@ section {
 
 .footer1 p {
   font-family: 'PT Serif', serif;
+  letter-spacing: .1em;
   font-size: .6em;
   padding: 25px 0;
+}
+
+.reduce-font {
+  font-size: 8px;
+}
+
+.photo-name {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  letter-spacing: -.01em;
 }
 
 .footer1::after {
@@ -224,4 +254,12 @@ section {
 
 .float-right {
   float: right;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.not-italic {
+  font-style: normal;
 }
